tests/NormalTests/paczka1/fuzzy1/12002602.err
Error in line 5: iZMGttp8w S249 39,6
Error in line 8: 7vVrh6 S288 17,8
Error in line 20: S249 S628 93,9
Error in line 23: S249 S249 17,0
Error in line 25: 6UUm A288 64,3
Error in line 27: zWBqdQvrJ A288 44,1
Error in line 26: S249 A288 43,8
Error in line 29: 6UUm S628 81,4
Error in line 32: zWBqdQvrJ S628 76,5
Error in line 37: iZMGttp8w S249 9,8
